feat: score on match (part-3)
* fix: date type on database

* fix: date type on entity hibernate

* chore: goal and score in database

* fix: enum error in database

* edit: image of database on docs folder

* fix: scorer bug on api spec

* edit: play-against entity

* fix: scorer bug on database

* feat: score and scorers on matchs api

* fix: match api conform on response

* refactor: match api

* refactor: TeamRestMapper toRest()

* refactor: match controller

* fix: psql error exception with enum
