# src/main/java/com/prog3td/demo/controller/mapper/TeamRestMapper.java
@@ -1,18 +1,19 @@
 package com.prog3td.demo.controller.mapper;
 
 import com.prog3td.demo.controller.response.Create.CreateTeam;
-import com.prog3td.demo.model.Player;
+import com.prog3td.demo.controller.response.Read.TeamRest;
 import com.prog3td.demo.model.Team;
+import com.prog3td.demo.service.MatchService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 
 @Component
 @AllArgsConstructor
 public class TeamRestMapper {
+    private PlayerRestMapper playerRestMapper;
+    private MatchService matchService;
     public Team toDomain(CreateTeam rest){
         return Team.builder()
                 .name(rest.getName())
@@ -28,6 +29,16 @@ public class TeamRestMapper {
                 .name(team.getName())
                 .players(team.getPlayers())
                 .sponsors(team.getSponsors())
+                .build();
+    }
+    public TeamRest toMatch(Team domain, Long idMatch){
+        return TeamRest.builder()
+                .id(domain.getIdTeam())
+                .name(domain.getName())
+                .score(matchService.countScore(matchService.findScorers(idMatch, domain.getIdTeam())))
+                .players(domain.getPlayers().stream().map(playerRestMapper::toRest).toList())
+                .scorers(matchService.findScorers(idMatch, domain.getIdTeam()))
+                .sponsors(domain.getSponsors())
                 .build();
     }
 }
